[package]
name = "redriddles"
version = "1.0.2"
edition = "2024"
description = "A pixel art editor made for a friend."
license = "GPL-3.0"
repository = "https://github.com/fullwoodenshovel/redriddles"
readme = "README.md"

[dependencies]
macroquad = "0.4"
enum_dispatch = "0.3"
oklab = "1.1"
rfd = "=0.16.0"
bimap = "0.6"
serde = "1.0"
serde_json = "1.0"
tuple_deref = { path = "tuple_deref" }

[features]
default = []
debug = []
hit_detect_debug = []

[package.metadata.release]
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "Release v{{version}}"